--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -615,8 +615,55 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
+
+
+
+.uk-navbar.uk-navbar-container {
+  height: 10vh;
+  border-bottom: 1px solid #EAEAEB
+}
+
+.menu {
+  margin: 0 30px 0 0;
+}
+
+.menu a {
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  text-decoration: none;
+  color: rgb(29, 29, 29);
+  margin: 0 10px;
+  line-height: 10vh;
+}
+
+label {
+  margin: 0 40px 0 0;
+  line-height: 10vh;
+  display: none
+}
+
+#toggle {
+  display: none
+}
+
 @media only screen and (max-width: 480px) {
-  html {
-    font-size: 100%;
+  label {
+    display: block;
+    cursor: pointer
+  }
+
+  .menu {
+    text-align: center;
+    width: 100%;
+    display: none
+  }
+
+  .menu a {
+    display: block;
+    border-bottom: 1px solid #EAEAEB;
+    margin: 0
+  }
+
+  #toggle:checked + .menu {
+    display: block;
   }
 }
