--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -5,6 +5,7 @@ html {
 }
 body {
   margin: 0;
+  max-width: 100vw;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -620,7 +621,16 @@ pre tt:after {
 
 .uk-navbar.uk-navbar-container {
   height: 10vh;
-  border-bottom: 1px solid #EAEAEB
+  width: 100%;
+  border-bottom: 1px solid #EAEAEB;
+}
+
+.uk-navbar-nav.menu  {
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  text-decoration: none;
+  color: rgb(64, 64, 64);
+  margin: 0 10px;
+  line-height: 10vh;
 }
 
 .menu {
@@ -630,13 +640,12 @@ pre tt:after {
 .menu a {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   text-decoration: none;
-  color: rgb(29, 29, 29);
+  color: rgb(64, 64, 64);
   margin: 0 10px;
   line-height: 10vh;
 }
 
 label {
-  margin: 0 40px 0 0;
   line-height: 10vh;
   display: none
 }
