:sparkles: Connected to Firestore DB, :zap: improved functionality for guest confirmation w/modals and response from DB

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -653,6 +653,13 @@ main {
   text-align: center;
 }
 
+#login {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
+
 #slideshow, #details, #additional, #messages {
   scroll-snap-align: start;
 }
